Retrieve data from category db:
* Added functionality to @app.route("/categories") to retrieve all
  category_name from category table in taskmanager db
* Added code in categories.html for displaying all categories added to
  the category table

Signed-off-by: Carolina Romero Carrasco <mcarolinarc28@gmail.com>

--- a/taskmanager/templates/categories.html
+++ b/taskmanager/templates/categories.html
@@ -12,10 +12,11 @@
 </div>
 
 <div class="row">
+    {% for category in categories %}
     <div class="col s12 m6 l3">
       <div class="card light-blue darken-4 center-align">
         <div class="card-content white-text">
-          <span class="card-title">Card Title</span>
+          <span class="card-title">{{category.category_name}}</span>
         </div>
         <div class="card-action">
           <a href="#" class="btn green accent-4">Edit</a>
@@ -23,6 +24,6 @@
         </div>
       </div>
     </div>
-  </div>
+    {% endfor %}
 
 {% endblock %}
