--- a/taskmanager/templates/tasks.html
+++ b/taskmanager/templates/tasks.html
@@ -22,8 +22,12 @@
             {% endif %}
         </div>
         <div class="collapsible-body">
-            <strong style="font-weight: bold;">{{ task.category }}</strong>
+            <strong>{{ task.category }}</strong>
             <p>{{ task.task_description }}</p>
+            <p>
+                <a href="{{ url_for('edit_task', task_id=task.id) }}" class="btn green accent-4">Edit</a>
+                <a href="{{ url_for('delete_task', task_id=task.id) }}" class="btn red">Delete</a>
+            </p>
         </div>
     </li>
     {% endfor %}
